--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   "dependencies": {
     "commitizen-emoji": "^1.0.5",
     "sirv-cli": "^2.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-emoji"
+    }
   }
 }
